[tool.poetry]
name = "study"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
jpholiday = "^0.1.5"
pandas = "^1.2.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
